tests/NormalTests/paczka1/fuzzy1/81661779.err
Error in line 1: nrFxOzPG9l6 S336 19,8
Error in line 5: 10JmaB A0 17,0
Error in line 7: ?A0
Error in line 10: nrFxOzPG9l6 A0 68,1
Error in line 8: nrFxOzPG9l6 A492 68,6
Error in line 20: 10JmaB S336 99,2
Error in line 13: nrFxOzPG9l6 S336 24,0
Error in line 25: rOb96yYox A495 65,9
Error in line 21: 10JmaB A495 15,1
